changed text on experiences site

--- a/experiences_interests.html
+++ b/experiences_interests.html
@@ -37,8 +37,7 @@
             <p>
                 I want to work in the USA because there are so many opportunities to work in the IT industry. 
                 I am working hard to get
-                there, trying to create projects, to build up my portfolio, 
-                I am taking the Techdegree on Treehouse and several courses on Udacity.
+                there, trying to create projects, to build up my portfolio by taking the FEWD Techdegree on Treehouse.
             </p>
         </div>
 
