--- a/hobbies.html
+++ b/hobbies.html
@@ -3,20 +3,21 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Experiences & Interests</title>
+    <title>Hobbies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
             <li class="name">Michaela Gombalova</li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="experiences_interests.html">Experiences & Interests</a></li>
+            <li><a href="experience.html">Experience</a></li>
+                        <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
         <img src="images/me2.jpg" alt="Photo of Michaela Gombalova" class="profile-image" />
@@ -25,26 +26,10 @@
     </header>
 
     <main class="flex">
-        <div class="card">
-            <h2>Experience</h2>
+        <section class="card">
+            <h2>Hobbies</h2>
             <p>
-<ul>
-    <li>HTML5</li>
-    <li>CSS3</li>
-    <li>JavaScript</li>
-    <li>Bootstrap</li>
-</ul>
-            <p>
-                I want to work in the USA because there are so many opportunities to work in the IT industry. 
-                I am working hard to get
-                there, trying to create projects, to build up my portfolio by taking the FEWD Techdegree on Treehouse.
-            </p>
-        </div>
-
-        <div class="card">
-            <h2>Interests</h2>
-            <p>
-                I have many interests beside Web Development
+                I have many hobbies beside Web Development
             </p>
             <ul class="skills">
                 <li>Figure Skating</li>
@@ -56,10 +41,11 @@
                 <li>Programming</li>
                 <li>TV Series</li>
             </ul>
+            <img src="images/edea.jpg" alt="Photo of my skating boots" class="main-image">
             <p>
-                And many moore...💜
+                And many more...💜
             </p>
-        </div>
+        </section>
     </main>
     <footer>
         <ul>
