--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     />
   </head>
   <body>
-    <div class="main-nav">
+    <nav class="main-nav">
       <ul class="nav">
         <li class="name">Michaela Gombalova</li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="experiences_interests.html">Experiences & Interests</a></li>
+        <li><a href="experience.html">Experience</a></li>
+                    <li><a href="hobbies.html">Hobbies</a></li>
       </ul>
-    </div>
+    </nav>
 
     <header>
       <img
@@ -30,7 +31,7 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>
           I’m an aspiring Full Stack Developer who loves everything about the web, starting from Front End to Back End. I 
@@ -38,13 +39,14 @@
           jobs. I’m excited to bring my life experience to the process of
           building fantastic looking websites.
         </p>
+        <img src="images/imgweb.jpg" alt="Image of a Macbook on a Desk" class="main-image">
         <p>
           I’ve been a professional Front Desk Receptionist and Shop Assistant and I am a life-long learner
           who's always interested in expanding my skills.
         </p>
-      </div>
+      </section>
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>
           I want to master the process of building web sites and increase my
@@ -63,7 +65,8 @@
         <p>
           I’d like to work for a web developer company creating awesome websites!
         </p>
-      </div>
+        <img src="images/quote.jpg" alt="Wonderful Quote" class="main-image">
+      </section>
     </main>
     <footer>
       <ul>
